마이페이지 만드는 중

--- a/product/list.html
+++ b/product/list.html
@@ -142,7 +142,7 @@
                                         <a href="#">
                                             <p>POINT</p>
                                             <div>
-                                                <p class="bold">0</p>
+                                                <p class="bold">2,000</p>
                                                 <p>P</p>
                                             </div>
                                         </a>
@@ -160,7 +160,7 @@
                                         <a href="#">
                                             <p>나의 리뷰</p>
                                             <div>
-                                                <p class="bold">0</p>
+                                                <p class="bold">3</p>
                                                 <p>개</p>
                                             </div>
                                         </a>
@@ -177,10 +177,64 @@
                                 </div> 
                             </div>
                         </div>
-                        <div class="recentOrder various">
-                            <div class="variousTitle">
+                        <div class="recentOrder var">
+                            <div class="varTitle">
                                 <h3>최근 주문 내역</h3>
                                 <a href="#" class="allView">전체보기</a>
+                            </div>
+                            <div class="orderList">
+                                <div class="orderHeader">
+                                    <div>
+                                        <p>최근 주문한 내역이 없습니다.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="orderList">
+                                <div class="orderHeader">
+                                    <div>
+                                        <p class="orderDate">2025.05.09</p>
+                                        <p class="orderNo">202505081004</p>
+                                    </div>
+                                    <a href="#" class="detailView">상세보기</a>
+                                </div>
+                                <div class="orderItem">
+                                    <div class="itemDetail">
+                                        <div class="itemImg">
+                                            <img src="/images/255x255(1).jpg" alt="주문한 상품 이미지">
+                                        </div>
+                                        <div class="itemInfo">
+                                            <div class="itemTitle">
+                                                <p class="itemCompany">맛있는소고기</p>
+                                                <p class="itemName">한우 1++ 1kg</p>
+                                            </div>
+                                            <div class="itemOption">
+                                                <p>한우 1++</p>
+                                                <p>&nbsp;/&nbsp;</p>
+                                                <p>1kg</p>
+                                            </div>
+                                            <div class="itemPrice">
+                                                <h4>50,000</h4>
+                                                <p>원</p>
+                                                <div class="v-l"></div>
+                                                <span>수량 1</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="orderManagement">
+                                        <div class="orderStatus">
+                                            <h4>구매확정</h4>
+                                            <p>구매가 확정되었습니다.</p>
+                                        </div>
+                                        <div class="orderButtons">
+                                            <a href="#">
+                                                <button>구매확정</button>
+                                            </a>
+                                            <a href="#">
+                                                <button>리뷰쓰기</button>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                             <div class="orderList">
                                 <div class="orderHeader">
@@ -190,6 +244,161 @@
                                     </div>
                                     <a href="#" class="detailView">상세보기</a>
                                 </div>
+                                <div class="orderItem">
+                                    <div class="itemDetail">
+                                        <div class="itemImg">
+                                            <img src="/images/255x255(1).jpg" alt="주문한 상품 이미지">
+                                        </div>
+                                        <div class="itemInfo">
+                                            <div class="itemTitle">
+                                                <p class="itemCompany">맛있는소고기</p>
+                                                <p class="itemName">한우 1++ 1kg</p>
+                                            </div>
+                                            <div class="itemOption">
+                                                <p>한우 1++</p>
+                                                <p>&nbsp;/&nbsp;</p>
+                                                <p>1kg</p>
+                                            </div>
+                                            <div class="itemPrice">
+                                                <h4>50,000</h4>
+                                                <p>원</p>
+                                                <div class="v-l"></div>
+                                                <span>수량 1</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="orderManagement">
+                                        <div class="orderStatus">
+                                            <h4>구매확정</h4>
+                                            <p>구매가 확정되었습니다.</p>
+                                        </div>
+                                        <div class="orderButtons">
+                                            <a href="#">
+                                                <button>구매확정</button>
+                                            </a>
+                                            <a href="#">
+                                                <button>리뷰쓰기</button>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="orderItem">
+                                    <div class="itemDetail">
+                                        <div class="itemImg">
+                                            <img src="/images/255x255(1).jpg" alt="주문한 상품 이미지">
+                                        </div>
+                                        <div class="itemInfo">
+                                            <div class="itemTitle">
+                                                <p class="itemCompany">맛있는소고기</p>
+                                                <p class="itemName">한우 1++ 1kg</p>
+                                            </div>
+                                            <div class="itemOption">
+                                                <p>한우 1++</p>
+                                                <p>&nbsp;/&nbsp;</p>
+                                                <p>1kg</p>
+                                            </div>
+                                            <div class="itemPrice">
+                                                <h4>50,000</h4>
+                                                <p>원</p>
+                                                <div class="v-l"></div>
+                                                <span>수량 1</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="orderManagement">
+                                        <div class="orderStatus">
+                                            <h4>구매확정</h4>
+                                            <p>구매가 확정되었습니다.</p>
+                                        </div>
+                                        <div class="orderButtons">
+                                            <a href="#">
+                                                <button>구매확정</button>
+                                            </a>
+                                            <a href="#">
+                                                <button>리뷰쓰기</button>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="pointHistory var">
+                            <div class="varTitle">
+                                <h3>포인트 적립 내역</h3>
+                                <a href="#" class="allView">전체보기</a>
+                            </div>
+                            <div class="orderHeader">
+                                <div>
+                                    <p>적립한 포인트가 없습니다.</p>
+                                </div>
+                            </div>
+                            <div class="pointList">
+                                <table>
+                                    <tr>
+                                        <th>적립일</th>
+                                        <th>적립 내용</th>
+                                        <th>적립 포인트</th>
+                                        <th>보유 포인트</th>
+                                        <th>만료일</th>
+                                    </tr>
+                                    <tr>
+                                        <td>2025.05.09</td>
+                                        <td>상품 구매 확정</td>
+                                        <td>+1,000P</td>
+                                        <td>2,000P</td>
+                                        <td>2025.06.09</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2025.05.08</td>
+                                        <td>가입 축하 포인트</td>
+                                        <td>+1,000P</td>
+                                        <td>1,000P</td>
+                                        <td>2025.06.08</td>
+                                    </tr>
+                                </table>
+                            </div>
+                        </div>
+                        <div class="myReviewList var">
+                            <div class="varTitle">
+                                <h3>나의 리뷰</h3>
+                                <a href="#" class="allView">전체보기</a>
+                            </div>
+                            <div class="orderHeader">
+                                <div>
+                                    <p>작성한 리뷰가 없습니다.</p>
+                                </div>
+                            </div>
+                            <div class="reviewList">
+                                <table>
+                                    <tr>
+                                        <th>번호</th>
+                                        <th>상품명</th>
+                                        <th>내용</th>
+                                        <th>별점</th>
+                                        <th>작성일</th>
+                                    </tr>
+                                    <tr>
+                                        <td>1</td>
+                                        <td>한우 1++ 1kg</td>
+                                        <td>한우 맞나요? 그짓말 하시는거죠? 호주산이잖아횽!</td>
+                                        <td>⭐⭐⭐⭐⭐</td>
+                                        <td>2025.05.08</td>
+                                    </tr>
+                                    <tr>
+                                        <td>1</td>
+                                        <td>한우 1++ 1kg</td>
+                                        <td>한우 맞나요? 그짓말 하시는거죠? 호주산이잖아횽!</td>
+                                        <td>⭐⭐⭐⭐⭐</td>
+                                        <td>2025.05.08</td>
+                                    </tr>
+                                    <tr>
+                                        <td>1</td>
+                                        <td>한우 1++ 1kg</td>
+                                        <td>한우 맞나요? 그짓말 하시는거죠? 호주산이잖아횽!</td>
+                                        <td>⭐⭐⭐⭐⭐</td>
+                                        <td>2025.05.08</td>
+                                    </tr>
+                                </table>
                             </div>
                         </div>
                     </section>
