주문 상세 모달, 마이페이지 메인

--- a/product/list.html
+++ b/product/list.html
@@ -401,6 +401,66 @@
                                 </table>
                             </div>
                         </div>
+                        <div class="customerCenter var">
+                            <div class="varTitle">
+                                <h3>고객 문의</h3>
+                                <a href="#" class="allView">전체보기</a>
+                            </div>
+                            <div class="orderHeader">
+                                <div>
+                                    <p>등록된 문의가 없습니다.</p>
+                                </div>
+                            </div>
+                            <div class="helpList">
+                                <table>
+                                    <tr>
+                                        <th>번호</th>
+                                        <th>채널</th>
+                                        <th>유형</th>
+                                        <th>제목</th>
+                                        <th>작성일</th>
+                                        <th>상태</th>
+                                    </tr>
+                                    <tr>
+                                        <td>1</td>
+                                        <td>고객센터</td>
+                                        <td>반품신청/철회</td>
+                                        <td>소고기가 너무 맛이가 없자나 응?</td>
+                                        <td>2025.05.08</td>
+                                        <td>답변 대기 중</td>
+                                    </tr>
+                                </table>
+                            </div>
+                        </div>
+                        <div class="productService var">
+                            <div class="varTitle">
+                                <h3>상품 문의</h3>
+                                <a href="#" class="allView">전체보기</a>
+                            </div>
+                            <div class="orderHeader">
+                                <div>
+                                    <p>등록된 문의가 없습니다.</p>
+                                </div>
+                            </div>
+                            <div class="productServiceList">
+                                <table>
+                                    <tr>
+                                        <th>번호</th>
+                                        <th>채널</th>
+                                        <th>제목</th>
+                                        <th>작성일</th>
+                                        <th>상태</th>
+                                    </tr>
+                                    <tr>
+                                        <td>1</td>
+                                        <td>상품 문의</td>
+                                        <td>소고기가 너무 맛이가 없자나 응?</td>
+                                        <td>2025.05.08</td>
+                                        <td>답변 대기 중</td>
+                                    </tr>
+                                </table>
+                            </div>
+                        </div>
                     </section>
                 </div>
             </div>
