페이지 복제 완료

--- a/product/list.html
+++ b/product/list.html
@@ -204,7 +204,7 @@
                                         </div>
                                         <div class="itemInfo">
                                             <div class="itemTitle">
-                                                <p class="itemCompany">맛있는소고기</p>
+                                                <a href="#" class="itemCompany">맛있는소고기</a>
                                                 <p class="itemName">한우 1++ 1kg</p>
                                             </div>
                                             <div class="itemOption">
@@ -231,6 +231,12 @@
                                             </a>
                                             <a href="#">
                                                 <button>리뷰쓰기</button>
+                                            </a>
+                                            <a href="#">
+                                                <button>반품신청</button>
+                                            </a>
+                                            <a href="#">
+                                                <button>교환신청</button>
                                             </a>
                                         </div>
                                     </div>
@@ -251,7 +257,7 @@
                                         </div>
                                         <div class="itemInfo">
                                             <div class="itemTitle">
-                                                <p class="itemCompany">맛있는소고기</p>
+                                                <a href="#" class="itemCompany">맛있는소고기</a>
                                                 <p class="itemName">한우 1++ 1kg</p>
                                             </div>
                                             <div class="itemOption">
@@ -278,6 +284,12 @@
                                             </a>
                                             <a href="#">
                                                 <button>리뷰쓰기</button>
+                                            </a>
+                                            <a href="#">
+                                                <button>반품신청</button>
+                                            </a>
+                                            <a href="#">
+                                                <button>교환신청</button>
                                             </a>
                                         </div>
                                     </div>
@@ -289,7 +301,7 @@
                                         </div>
                                         <div class="itemInfo">
                                             <div class="itemTitle">
-                                                <p class="itemCompany">맛있는소고기</p>
+                                                <a href="#" class="itemCompany">맛있는소고기</a>
                                                 <p class="itemName">한우 1++ 1kg</p>
                                             </div>
                                             <div class="itemOption">
@@ -316,6 +328,12 @@
                                             </a>
                                             <a href="#">
                                                 <button>리뷰쓰기</button>
+                                            </a>
+                                            <a href="#">
+                                                <button>반품신청</button>
+                                            </a>
+                                            <a href="#">
+                                                <button>교환신청</button>
                                             </a>
                                         </div>
                                     </div>
